[metadata]
name = juliaup
version = 0.1.0
description = An interface to the
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
project_urls =
    Home = http://github.com/cjdoris/pyjuliaup

[options]
packages = find:
package_dir =
    =src
